--- a/frontend/src/pages/QuickEdit.module.css
+++ b/frontend/src/pages/QuickEdit.module.css
@@ -1,6 +1,9 @@
 .page {
   padding: 32px;
   max-width: 680px;
+  width: 100%;
+  box-sizing: border-box;
+  align-self: center;
 }
 
 .header {
